--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     web_server:
         image: nginx:latest
         ports:
-            - "${WEB_PUBLISHED_PORT:-80}:80"
+            - "8081:80"
         volumes:
             - ./:/var/www
             - ./docker/nginx/vhost.conf:/etc/nginx/conf.d/default.conf
@@ -33,40 +33,25 @@ services:
         depends_on:
             - app
 
-    ####################################################################################################
-    # DATABASE (MySQL)
-    ####################################################################################################
-    db:
-        image: mysql:8.4
-        ports:
-            - "${DB_PUBLISHED_PORT:-33066}:3306"
-        environment:
-            - MYSQL_DATABASE=${DB_DATABASE:-laravel}
-            - MYSQL_ROOT_PASSWORD=${DB_PASSWORD:-password}
-        networks:
-            - network
-        volumes:
-            - app_name_db:/var/lib/mysql
-            - ./docker/mysql/logs:/var/log/mysql
-            - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+
 
     ####################################################################################################
     # phpMyAdmin
     ####################################################################################################
-    #phpmyadmin:
-    #    image: phpmyadmin/phpmyadmin
-    #    ports:
-    #        - "8080:80"
-    #    links:
-    #        - db
-    #    environment:
-    #        PMA_HOST: db
-    #        PMA_PORT: 3306
-    #        PMA_ARBITRARY: 1
-    #    networks:
-    #        - network
-    #    volumes:
-    #        - app_name_phpmyadmin:/sessions
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        ports:
+            - "8089:80"
+        links:
+            - db
+        environment:
+            PMA_HOST: db
+            PMA_PORT: 3306
+            PMA_ARBITRARY: 1
+        networks:
+            - network
+        volumes:
+            - app_name_phpmyadmin:/sessions
 
     ####################################################################################################
     # Mailpit
@@ -100,38 +85,21 @@ services:
     # ####################################################################################################
     # DATABASE (MariaDB)
     # ####################################################################################################
-    #db:
-    #    image: mariadb:10.11
-    #    ports:
-    #        - "${DB_PUBLISHED_PORT:-33066}:3306"
-    #    environment:
-    #        - MYSQL_DATABASE=${DB_DATABASE:-laravel}
-    #        - MYSQL_PASSWORD=${DB_PASSWORD:-password}
-    #        - MYSQL_ROOT_PASSWORD=${DB_PASSWORD:-password}
-    #    networks:
-    #        - network
-    #    volumes:
-    #        - app_name_db:/var/lib/mysql
-    #        - ./docker/mysql/logs:/var/log/mysql
-    #        - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+    db:
+       image: mariadb:latest
+       environment:
+       MYSQL_ROOT_PASSWORD: Annaaremere!1
+       MYSQL_DATABASE: legalmente_prod
+       MYSQL_USER: legalmente_user
+       MYSQL_PASSWORD: 2-ua$9hQ26T/
+       networks:
+            - network
+        volumes:
+            - app_name_db:/var/lib/mysql
+            - ./docker/mysql/logs:/var/log/mysql
+            - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
 
-    ####################################################################################################
-    # DATABASE (PostgresSQL)
-    ####################################################################################################
-    #db:
-    #    image: postgres:16
-    #    ports:
-    #        - "${POSTGRES_PUBLISHED_PORT:-5432}:5432"
-    #    environment:
-    #        - POSTGRES_DB=${POSTGRES_DB:-laravel}
-    #        - POSTGRES_USER=${POSTGRES_USER:-root}
-    #        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-password}
-    #    networks:
-    #        - network
-    #    volumes:
-    #        - app_name_db:/var/lib/postgresql/data
 
-    ####################################################################################################
     # pgAdmin
     ####################################################################################################
     #pgadmin:
@@ -153,5 +121,5 @@ networks:
 volumes:
     app_name_db: { }
     app_name_mailpit: { }
-#    app_name_phpmyadmin: { }
-#    app_name_redis: { }
+    app_name_phpmyadmin: { }
+    app_name_redis: { }
